--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "tsc --build & node ./build/server.js",
-    "start:dev": "node_modules\\.bin\\nodemon ./build/server.js",
-    "build": "tsc --build",
-    "clean": "tsc --build --clean"
+    "start": "npm run build && node ./build/server.js",
+    "dev": "cls && tsnd --respawn src/server.ts",
+    "build": "npx tsc --build",
+    "clean": "npx tsc --build --clean"
   },
   "keywords": [],
   "author": "Diego",
@@ -17,16 +17,15 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-validator": "^6.14.0",
     "express-winston": "^4.2.0",
+    "helmet": "^5.0.2",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.17.0",
     "sequelize-typescript": "^2.1.3",
-    "validator": "^13.7.0",
-    "winston": "^3.7.2",
-    "helmet": "^5.0.2"
+    "validatorjs": "^3.22.1",
+    "winston": "^3.7.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -35,8 +34,8 @@
     "@types/helmet": "^4.0.0",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.24",
-    "@types/validator": "^13.7.2",
-    "nodemon": "^2.0.15",
+    "@types/validatorjs": "^3.15.0",
+    "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.3"
   }
 }
